chore: add relationships for related posts and categories in Portfolio config; update styles and enable additional blocks

--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -203,6 +203,9 @@
     padding-right: var(--gutter-h);
   }
 }
+.app-header__account {
+  text-decoration: none;
+}
 
 /* ------------------------------ Typography ----------------------------- */
 .dashboard__wrap {
